--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @student.to_s %></h1>
 <% if @student.active %>
+<% binding.pry %>
 <p>This student is currently active.</p>
 <% else %>
 <p>This student is currently inactive.</p>
