Automatically backed up by Learn

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,5 +2,5 @@
 <% if @student.active %>
 This student is currently active
 <% else %>
-<p>This student is currently inactive.</p>
+his student is currently inactive.</p>
 <% end %>
