--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,5 +2,5 @@
 <% if @student.active %>
 This student is currently active
 <% else %>
-his student is currently inactive.</p>
+This student is currently inactive
 <% end %>
