Automatically backed up by Learn

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,5 +2,6 @@
 <% if @student.active %>
 <div>This student is currently active.</div>
 <% end %>
+<% if !@student.active  %>
 <div>This student is currently inactive.</div>
 <% end %>
