--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @student.to_s %></h1>
 <% if @student.active %>
 <div>This student is currently active.</div>
+<% else %>
 <% end %>
 <% if !@student.active  %>
 <div>This student is currently inactive.</div>
